Add header To Html File And Style Responsive in css File

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Memory Game</title>
     <link href="css/weblearn.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=KoHo:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <h1 class="heading">Memory-Game</h1>
     <div class="settings">
         <p id="score"></p>
         <p id="wrong"></p>
