Change Files Name From Weblearn To memory-game

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
-    <link href="css/weblearn.css" rel="stylesheet">
+    <link href="css/memory-game.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=KoHo:wght@600&display=swap" rel="stylesheet">
@@ -199,6 +199,6 @@
         </div>
         <!-- End sixty-block -->
     <!-- End Game Container -->    
-    <script src="js/weblearn.js"></script>
+    <script src="js/memory-game.js"></script>
 </body>
 </html>
